# algorithms-patterns

./: CMakeLists.txt  README.md
AvlTree/: AvlTree.cpp  CMakeLists.txt
BTree/: BTree.cpp
Command/: Command.cpp
HashTableChains/: CMakeLists.txt  HashTableChains.cpp
HashTableIndirectAdressing/: CMakeLists.txt  HashTableIndirectAdressing.cpp
Heap/: Heap.cpp
Observer/: CMakeLists.txt  Observer.cpp
PartitionSort/: CMakeLists.txt  PartitionSort.cpp
Queue/: Queue.cpp
RingBuffer/: CMakeLists.txt  RingBuffer.cpp
RingBufferDeq/: CMakeLists.txt  RingBufferDeq.cpp
Singleton/: Singleton.cpp
Visitor/: CMakeLists.txt  Visitor.cpp
