cmake_minimum_required(VERSION 3.19)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(Algorithms&Patterns VERSION 0.1.0)

add_subdirectory(Queue)
add_subdirectory(Heap)
add_subdirectory(PartitionSort)
add_subdirectory(HashTableChains)
add_subdirectory(HashTableIndirectAdressing)
add_subdirectory(BTree)
add_subdirectory(AvlTree)
add_subdirectory(Singleton)
add_subdirectory(Command)
add_subdirectory(Observer)